@@ -1,15 +1,5 @@
 ==== Build
 
-* configure will use clang++ by default if it is installed. 
-  To compile with g++ instead:
-
-      export CXX=g++
-
-* clang coughs up these warnings:
-
-    Wunused-but-set-variable is not understood by clang
-    clang: warning: argument unused during compilation: '-pthread'
-
 * With cmake, make install will rebuild the docs even though when already
   built.
 
@@ -18,18 +8,6 @@
 
 * Enabling debug messages may erroneously affect the number of packets
   processed from pcaps
-
-* It is not possible to build unit tests w/o static plugins.
-
-* If you build with hyperscan on OS X and see:
-
-    dyld: Library not loaded: @rpath/libhs.4.0.dylib
-
-  when you try to run src/snort, export DYLD_LIBRARY_PATH with the path to
-  libhs.  You can also do:
-
-    install_name_tool -change @rpath/libhs.4.0.dylib \
-        /path-to/libhs.4.0.dylib src/snort
 
 * g++ 4.9.2 with -O3 reports:
 
@@ -92,15 +70,16 @@
 * Won't convert packet rules (alert tcp etc.) to service rules (alert http
   etc.).
 
-* alert_fast and alert_full: output configuration includes "file = 'foo.bar'", but file is a bool
-  and you cannot specify an output file name in the configuration.
+* alert_fast and alert_full: output configuration includes "file =
+  'foo.bar'", but file is a bool and you cannot specify an output file name
+  in the configuration.
 
 * preprocessor ports option: ports <number> not supported.
 
 ==== Runtime
 
-* -B <mask> feature does not work. It does ordinary IP address obfuscation instead of using the
-  mask.
+* -B <mask> feature does not work. It does ordinary IP address obfuscation
+  instead of using the mask.
 
 * Obfuscation does not work for csv format.
 
@@ -109,5 +88,6 @@
 * The hext DAQ does not support embedded quotes in text lines (use hex
   lines as a workaround).
 
-* Stream TCP alert squash mechanism incorrectly squashes alerts for different TCP packets.
+* Stream TCP alert squash mechanism incorrectly squashes alerts for
+  different TCP packets.
 
